@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4Step.icc,v 1.6 2001-07-11 10:08:36 gunter Exp $
+// $Id: G4Step.icc,v 1.7 2001-10-22 04:19:40 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -179,7 +179,7 @@ inline
    fpPreStepPoint->SetMomentumDirection(fpTrack->GetMomentumDirection());
    fpPreStepPoint->SetKineticEnergy(fpTrack->GetKineticEnergy());
    fpPreStepPoint->SetVelocity(fpTrack->GetVelocity());
-   fpPreStepPoint->SetTouchable(fpTrack->GetTouchable());
+   fpPreStepPoint->SetTouchableHandle(fpTrack->GetTouchableHandle());
    fpPreStepPoint->SetMaterial( fpTrack->GetTouchable()->GetVolume()->GetLogicalVolume()->GetMaterial());
    fpPreStepPoint->SetPolarization(fpTrack->GetPolarization());
    fpPreStepPoint->SetSafety(0.);
@@ -214,7 +214,7 @@ inline
    fpTrack->SetStepLength(fStepLength);
    // NextTouchable is updated 
    // (G4Track::Touchable points touchable of Pre-StepPoint)
-   fpTrack->SetNextTouchable(fpPostStepPoint->GetTouchable());
+   fpTrack->SetNextTouchableHandle(fpPostStepPoint->GetTouchableHandle());
    fpTrack->SetWeight(fpPostStepPoint->GetWeight());
 
    // set velocity 
