@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4Track.cc,v 1.12 2001-07-11 10:08:40 gunter Exp $
+// $Id: G4Track.cc,v 1.13 2001-10-22 04:19:42 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -29,15 +29,10 @@
 //
 //  G4Track.cc
 //
-// Contact:
-//   Questions and comments to this code should be sent to
-//     Katsuya Amako  (e-mail: Katsuya.Amako@kek.jp)
-//     Takashi Sasaki (e-mail: Takashi.Sasaki@kek.jp)
-//
 //---------------------------------------------------------------
 //   Add copy constructor            Hisaya Feb. 07 01
 //   Fix GetVelocity                 Hisaya Feb. 17 01
-//
+//   Modification for G4TouchableHandle             22 Oct. 2001  R.Chytracek//
 #include "G4Track.hh"
 
 G4Allocator<G4Track> aTrackAllocator;
@@ -47,53 +42,35 @@ G4Track::G4Track(G4DynamicParticle* apValueDynamicParticle,
                  G4double aValueTime,
                  const G4ThreeVector& aValuePosition)
 ///////////////////////////////////////////////////////////
-{
-   fpDynamicParticle = apValueDynamicParticle;
-   fCurrentStepNumber = 0;
-   fGlobalTime = aValueTime;
-   fLocalTime = 0.;
-   fTrackLength = 0.;
-   fPosition = aValuePosition;
-   fpTouchable = 0;
-   fpNextTouchable = 0; 
-   fpStep=0;
-
-   fpLVAtVertex = 0;
-   fpCreatorProcess = 0;
-
-   fTrackStatus = fAlive;
-
-   fBelowThreshold = false;
-   fGoodForTracking = false;
-   fWeight = 1.0;
-
-   fpUserInformation = 0;
+  : fCurrentStepNumber(0),    fPosition(aValuePosition),
+    fGlobalTime(aValueTime),  fLocalTime(0.),
+    fTrackLength(0.),
+    fParentID(0),             fTrackID(0),
+    fpDynamicParticle(apValueDynamicParticle),
+    fTrackStatus(fAlive),
+    fBelowThreshold(false),   fGoodForTracking(false),
+    fWeight(1.0),
+    fpStep(0),
+    fpLVAtVertex(0),          fpCreatorProcess(0),
+    fpUserInformation(0)
+{    
 }
 
 //////////////////
 G4Track::G4Track()
 //////////////////
+  : fCurrentStepNumber(0),    
+    fGlobalTime(0),           fLocalTime(0.),
+    fTrackLength(0.),
+    fParentID(0),             fTrackID(0),
+    fpDynamicParticle(0),
+    fTrackStatus(fAlive),
+    fBelowThreshold(false),   fGoodForTracking(false),
+    fWeight(1.0),
+    fpStep(0),
+    fpLVAtVertex(0),          fpCreatorProcess(0),
+    fpUserInformation(0)
 {
-   fCurrentStepNumber = 0;
-   fGlobalTime = 0.;
-   fLocalTime = 0.;
-   fTrackLength = 0.;
-   fParentID = 0;
-   fTrackID = 0;
-   fpTouchable = 0;
-   fpNextTouchable = 0;
-   fpStep=0;
-
-   fpDynamicParticle = 0;
-   fpLVAtVertex = 0;
-   fpCreatorProcess = 0;
-
-   fTrackStatus = fAlive;
-   fBelowThreshold = false;
-   fGoodForTracking = false;
-   fWeight = 1.0;
-
-   fpUserInformation = 0;
 }
 //////////////////
 G4Track::G4Track(const G4Track& right)
@@ -124,9 +101,7 @@ G4Track & G4Track::operator=(const G4Track &right)
    // Track ID is not copied and set to zero for new track
    fTrackID = 0;
 
-   // pointers to Touchables or Step are not copied
-   fpTouchable = 0;
-   fpNextTouchable = 0;
+   // pointers to Step are not copied
    fpStep=0;
 
    fpDynamicParticle = new G4DynamicParticle(*(right.fpDynamicParticle));
