@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2001-10-20 08:12:40 kurasige Exp $
+$Id: History,v 1.33 2001-10-22 04:19:34 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Oct. 22, 01  H.Kurashige (track-V03-02-04)
+- Modify to intorduce TouchableHandle (Radovan)
+
 Oct. 20, 01  H.Kurashige (track-V03-02-03)
 - Remove "static inline methods"
 - Disable EventBiasingMechanism 
